java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldMethod2-hints.pass
Create field t in org.netbeans.test.java.hints.CreateFieldMethod2
Create parameter t
Create local variable t
